--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
 management.endpoints.web.exposure.include=health,info,loggers,prometheus
 
+#spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/ksbylending
 spring.datasource.hikari.username=ksbylending_user
 spring.datasource.hikari.password=xxxxxxxx
