--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "2.0.4-RELEASE"
+        version "2.0.6-RELEASE"
     }
     repositories {
         mavenCentral()
@@ -14,15 +14,15 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.0.4.RELEASE"
+    id "org.springframework.boot" version "2.0.6.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "groovy"
     id "checkstyle"
-    id "com.github.spotbugs" version "1.6.4"
+    id "com.github.spotbugs" version "1.6.5"
     id "pmd"
     id "net.ltgt.errorprone" version "0.0.16"
     id "de.undercouch.download" version "3.4.3"
-    id "com.gorylenko.gradle-git-properties" version "1.5.2"
+    id "com.gorylenko.gradle-git-properties" version "2.0.0-beta1"
 }
 
 sourceCompatibility = 1.8
@@ -65,12 +65,12 @@ configurations {
 
 checkstyle {
     configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
-    toolVersion = "8.12"
+    toolVersion = "8.14"
     sourceSets = [project.sourceSets.main]
 }
 
 spotbugs {
-    toolVersion = "3.1.7"
+    toolVersion = "3.1.8"
     ignoreFailures = true
     effort = "max"
     spotbugsTest.enabled = false
@@ -83,7 +83,7 @@ tasks.withType(com.github.spotbugs.SpotBugsTask) {
 }
 
 pmd {
-    toolVersion = "6.7.0"
+    toolVersion = "6.9.0"
     sourceSets = [project.sourceSets.main]
     ignoreFailures = true
     consoleOutput = true
@@ -98,9 +98,9 @@ repositories {
 dependencyManagement {
     imports {
         // mavenBom は以下の URL のものを使用する
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.0.4.RELEASE/
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.0.6.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.0.4.RELEASE/spring-boot-dependencies-2.0.4.RELEASE.pom
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.0.4.RELEASE/spring-boot-dependencies-2.0.6.RELEASE.pom
         mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES) {
             // Spring Boot の BOM に定義されているバージョンから変更する場合には、ここに以下のように記述する
             // bomProperty "thymeleaf.version", "3.0.9.RELEASE"
@@ -109,13 +109,13 @@ dependencyManagement {
 }
 
 dependencies {
-    def jdbcDriver = "org.postgresql:postgresql:42.2.4"
+    def jdbcDriver = "org.postgresql:postgresql:42.2.5"
     def spockVersion = "1.1-groovy-2.4"
     def domaVersion = "2.19.3"
-    def lombokVersion = "1.18.2"
+    def lombokVersion = "1.18.4"
     def errorproneVersion = "2.3.1"
-    def powermockVersion = "2.0.0-beta.5"
-    def spotbugsVersion = "3.1.7"
+    def powermockVersion = "2.0.0-RC.4"
+    def spotbugsVersion = "3.1.8"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-dependency-versions.html ) 参照
@@ -151,14 +151,14 @@ dependencies {
     runtimeOnly("${jdbcDriver}")
     implementation("com.integralblue:log4jdbc-spring-boot-starter:1.0.2")
     implementation("org.simpleframework:simple-xml:2.7.1")
-    implementation("com.univocity:univocity-parsers:2.7.5")
-    implementation("com.google.guava:guava:26.0-jre")
-    testImplementation("org.dbunit:dbunit:2.5.4")
+    implementation("com.univocity:univocity-parsers:2.7.6")
+    implementation("com.google.guava:guava:27.0-jre")
+    testImplementation("org.dbunit:dbunit:2.6.0")
     testImplementation("com.icegreen:greenmail:1.5.8")
-    testImplementation("org.assertj:assertj-core:3.11.0")
+    testImplementation("org.assertj:assertj-core:3.11.1")
     testImplementation("com.jayway.jsonpath:json-path:2.4.0")
     testImplementation("org.jsoup:jsoup:1.11.3")
-    testImplementation("cglib:cglib-nodep:3.2.7")
+    testImplementation("cglib:cglib-nodep:3.2.9")
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
     
