--- a/build.gradle
+++ b/build.gradle
@@ -100,17 +100,18 @@ dependencyManagement {
         // mavenBom は以下の URL のものを使用する
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.0.6.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.0.4.RELEASE/spring-boot-dependencies-2.0.6.RELEASE.pom
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.0.6.RELEASE/spring-boot-dependencies-2.0.6.RELEASE.pom
         mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES) {
             // Spring Boot の BOM に定義されているバージョンから変更する場合には、ここに以下のように記述する
             // bomProperty "thymeleaf.version", "3.0.9.RELEASE"
+            bomProperty "groovy.version", "2.5.4"
         }
     }
 }
 
 dependencies {
     def jdbcDriver = "org.postgresql:postgresql:42.2.5"
-    def spockVersion = "1.1-groovy-2.4"
+    def spockVersion = "1.2-groovy-2.5"
     def domaVersion = "2.19.3"
     def lombokVersion = "1.18.4"
     def errorproneVersion = "2.3.1"
