--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -4,8 +4,8 @@ spring.mail.port=25
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 
-spring.redis.sentinel.master=mymaster
-spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
+spring.redis.host=localhost
+spring.redis.port=6379
 
 # Spring MVC
 logging.level.org.springframework.web=DEBUG
