--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -23,3 +23,7 @@ scrape_configs:
   - targets: ['172.23.136.33:8080']
     labels:
       application: 'lending'
+
+- job_name: 'redis_exporter'
+  static_configs:
+  - targets: ['172.23.136.33:9121']
