#132 Docker で Redis Cluster の環境を構築する設定を追加し、Web アプリケーションも Redis Cluster へ接続できるよう変更しました

--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,7 @@ dependencies {
     implementation("org.apache.commons:commons-lang3")
     implementation("org.codehaus.janino:janino")
     implementation("io.micrometer:micrometer-registry-prometheus")
+    implementation("redis.clients:jedis")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
