--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -4,8 +4,12 @@ spring.mail.port=25
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.cluster.nodes[0]=172.23.136.33:6379
+spring.redis.cluster.nodes[1]=172.23.136.33:6380
+spring.redis.cluster.nodes[2]=172.23.136.33:6381
+spring.redis.cluster.nodes[3]=172.23.136.33:6382
+spring.redis.cluster.nodes[4]=172.23.136.33:6383
+spring.redis.cluster.nodes[5]=172.23.136.33:6384
 
 # Spring MVC
 logging.level.org.springframework.web=DEBUG
