--- a/docker/redis/Dockerfile
+++ b/docker/redis/Dockerfile
@@ -1,3 +1,4 @@
-FROM redis:5.0.1
+ARG REDIS_VERSION
+FROM redis:${REDIS_VERSION}
 RUN apt-get update -qq && apt-get install -y expect
 ADD redis.conf /etc/redis/
