--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 HOST_IP_ADDRESS=172.23.136.33
+REDIS_VERSION=5.0.2
+REDIS_CLUSTER_1_PORT=6379
+REDIS_CLUSTER_2_PORT=6380
+REDIS_CLUSTER_3_PORT=6381
+REDIS_CLUSTER_4_PORT=6382
+REDIS_CLUSTER_5_PORT=6383
+REDIS_CLUSTER_6_PORT=6384
