#132 Docker で単体の RabbitMQ サーバを構築し、Web アプリケーションから接続する設定を修正しました

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ REDIS_CLUSTER_3_PORT=6381
 REDIS_CLUSTER_4_PORT=6382
 REDIS_CLUSTER_5_PORT=6383
 REDIS_CLUSTER_6_PORT=6384
+
+RABBITMQ_VERSION=3.7.8-management
