--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -27,3 +27,7 @@ scrape_configs:
 - job_name: 'redis_exporter'
   static_configs:
   - targets: ['172.23.136.33:9121']
+
+- job_name: 'rabbitmq_exporter'
+  static_configs:
+  - targets: ['172.23.136.33:9419']
