#132 application-unittest.properties, application-product.properties に spring.rabbitmq.username, spring.rabbitmq.password の設定を追加しました

--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -9,6 +9,8 @@ spring.mail.port=25
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=12345678
 
 spring.redis.cluster.nodes[0]=172.23.136.33:6379
 spring.redis.cluster.nodes[1]=172.23.136.33:6380
