--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,16 +185,71 @@ services:
   #
   # 起動したコンテナの rabbitmq に rabbitmqctl で接続して管理コマンドを実行するには以下のコマンドを実行する
   # docker exec -it rabbitmq rabbitmqctl ...
-  rabbitmq:
+  #############################################################################
+  # 単体 Redis サーバ
+  # rabbitmq:
+  #   image: rabbitmq:${RABBITMQ_VERSION}-alpine
+  #   container_name: rabbitmq
+  #   hostname: rabbitmq
+  #   ports:
+  #   - "5672:5672"
+  #   - "15672:15672"
+  #   environment:
+  #   - RABBITMQ_DEFAULT_USER=rabbitmq
+  #   - RABBITMQ_DEFAULT_PASS=12345678
+  #
+  #############################################################################
+  # RabbitMQ Clustering
+  rabbitmq1:
     image: rabbitmq:${RABBITMQ_VERSION}-alpine
-    container_name: rabbitmq
-    hostname: rabbitmq
+    container_name: rabbitmq1
+    hostname: rabbitmq1
+    environment:
+    - RABBITMQ_ERLANG_COOKIE
+    - RABBITMQ_DEFAULT_USER
+    - RABBITMQ_DEFAULT_PASS
+    - RABBITMQ_DEFAULT_VHOST
+  rabbitmq2:
+    image: rabbitmq:${RABBITMQ_VERSION}-alpine
+    container_name: rabbitmq2
+    hostname: rabbitmq2
+    depends_on:
+    - rabbitmq1
+    environment:
+    - RABBITMQ_ERLANG_COOKIE
+    volumes:
+    - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /bin/sh -c /usr/local/bin/cluster-entrypoint.sh
+  rabbitmq3:
+    image: rabbitmq:${RABBITMQ_VERSION}-alpine
+    container_name: rabbitmq3
+    hostname: rabbitmq3
+    depends_on:
+    - rabbitmq1
+    environment:
+    - RABBITMQ_ERLANG_COOKIE
+    volumes:
+    - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+  haproxy:
+    image: haproxy:1.8.14-alpine
+    container_name: haproxy
+    volumes:
+    - ./docker/rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    depends_on:
+    - rabbitmq1
+    - rabbitmq2
+    - rabbitmq3
     ports:
     - "5672:5672"
     - "15672:15672"
-    environment:
-    - RABBITMQ_DEFAULT_USER=rabbitmq
-    - RABBITMQ_DEFAULT_PASS=12345678
+  haproxy-rsyslog:
+    image: rafpe/docker-haproxy-rsyslog
+    container_name: haproxy-rsyslog
+    volumes:
+    - ./docker/rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    depends_on:
+    - haproxy
 
   rabbitmq_exporter:
     image: kbudde/rabbitmq-exporter:latest
@@ -203,7 +258,7 @@ services:
     - "9419:9419"
     environment:
     - RABBIT_URL=http://${HOST_IP_ADDRESS}:15672
-    - RABBIT_USER=rabbitmq
-    - RABBIT_PASSWORD=12345678
+    - RABBIT_USER=${RABBITMQ_DEFAULT_USER}
+    - RABBIT_PASSWORD=${RABBITMQ_DEFAULT_PASS}
     - RABBIT_CAPABILITIES=bert,no_sort
     - PUBLISH_PORT=9419
