--- a/docker/redis/Dockerfile
+++ b/docker/redis/Dockerfile
@@ -1,3 +1,3 @@
 ARG REDIS_VERSION
-FROM redis:${REDIS_VERSION}
-RUN apt-get update -qq && apt-get install -y expect
+FROM redis:${REDIS_VERSION}-alpine
+RUN apk add --no-cache expect
