#132 Docker で単体の PostreSQL＋pgAdmin4 の環境を構築しました

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ RABBITMQ_ERLANG_COOKIE=Uzkm93w5e1Lz8AcP
 RABBITMQ_DEFAULT_USER=rabbitmq
 RABBITMQ_DEFAULT_PASS=12345678
 RABBITMQ_DEFAULT_VHOST=/
+
+POSTGRESQL_VERSION=11.1
+PGADMIN4_VERSION=3.6
