--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,18 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     ports:
-    - "9090:9090"
+      - "9090:9090"
     volumes:
-    - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-    - ./docker/prometheus/storage:/prometheus
+      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./docker/prometheus/storage:/prometheus
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-    - "3000:3000"
+      - "3000:3000"
     volumes:
-    - ./docker/grafana/storage:/var/lib/grafana
+      - ./docker/grafana/storage:/var/lib/grafana
 
   # 起動したコンテナに /bin/sh でアクセスする場合には以下のコマンドを実行する
   # docker exec -it redis /bin/sh
@@ -38,147 +38,147 @@ services:
     image: redis:${REDIS_VERSION}-alpine
     container_name: redis-cluster-${REDIS_CLUSTER_1_PORT}
     ports:
-    - "${REDIS_CLUSTER_1_PORT}:6379"
-    - "1${REDIS_CLUSTER_1_PORT}:16379"
+      - "${REDIS_CLUSTER_1_PORT}:6379"
+      - "1${REDIS_CLUSTER_1_PORT}:16379"
     volumes:
-    - ./docker/redis/redis.conf:/etc/redis/redis.conf
+      - ./docker/redis/redis.conf:/etc/redis/redis.conf
     command:
-    - /bin/sh
-    - -c
-    - |
-      redis-server /etc/redis/redis.conf \
-                  --cluster-announce-ip ${HOST_IP_ADDRESS} \
-                  --cluster-announce-port ${REDIS_CLUSTER_1_PORT} \
-                  --cluster-announce-bus-port 1${REDIS_CLUSTER_1_PORT}
+      - /bin/sh
+      - -c
+      - |
+        redis-server /etc/redis/redis.conf \
+                    --cluster-announce-ip ${HOST_IP_ADDRESS} \
+                    --cluster-announce-port ${REDIS_CLUSTER_1_PORT} \
+                    --cluster-announce-bus-port 1${REDIS_CLUSTER_1_PORT}
   redis-cluster-2:
     image: redis:${REDIS_VERSION}-alpine
     container_name: redis-cluster-${REDIS_CLUSTER_2_PORT}
     ports:
-    - "${REDIS_CLUSTER_2_PORT}:6379"
-    - "1${REDIS_CLUSTER_2_PORT}:16379"
+      - "${REDIS_CLUSTER_2_PORT}:6379"
+      - "1${REDIS_CLUSTER_2_PORT}:16379"
     volumes:
-    - ./docker/redis/redis.conf:/etc/redis/redis.conf
+      - ./docker/redis/redis.conf:/etc/redis/redis.conf
     command:
-    - /bin/sh
-    - -c
-    - |
-      redis-server /etc/redis/redis.conf \
-                  --cluster-announce-ip ${HOST_IP_ADDRESS} \
-                  --cluster-announce-port ${REDIS_CLUSTER_2_PORT} \
-                  --cluster-announce-bus-port 1${REDIS_CLUSTER_2_PORT}
+      - /bin/sh
+      - -c
+      - |
+        redis-server /etc/redis/redis.conf \
+                    --cluster-announce-ip ${HOST_IP_ADDRESS} \
+                    --cluster-announce-port ${REDIS_CLUSTER_2_PORT} \
+                    --cluster-announce-bus-port 1${REDIS_CLUSTER_2_PORT}
     depends_on:
-    - redis-cluster-1
+      - redis-cluster-1
   redis-cluster-3:
     image: redis:${REDIS_VERSION}-alpine
     container_name: redis-cluster-${REDIS_CLUSTER_3_PORT}
     ports:
-    - "${REDIS_CLUSTER_3_PORT}:6379"
-    - "1${REDIS_CLUSTER_3_PORT}:16379"
+      - "${REDIS_CLUSTER_3_PORT}:6379"
+      - "1${REDIS_CLUSTER_3_PORT}:16379"
     volumes:
-    - ./docker/redis/redis.conf:/etc/redis/redis.conf
+      - ./docker/redis/redis.conf:/etc/redis/redis.conf
     command:
-    - /bin/sh
-    - -c
-    - |
-      redis-server /etc/redis/redis.conf \
-                  --cluster-announce-ip ${HOST_IP_ADDRESS} \
-                  --cluster-announce-port ${REDIS_CLUSTER_3_PORT} \
-                  --cluster-announce-bus-port 1${REDIS_CLUSTER_3_PORT}
+      - /bin/sh
+      - -c
+      - |
+        redis-server /etc/redis/redis.conf \
+                    --cluster-announce-ip ${HOST_IP_ADDRESS} \
+                    --cluster-announce-port ${REDIS_CLUSTER_3_PORT} \
+                    --cluster-announce-bus-port 1${REDIS_CLUSTER_3_PORT}
     depends_on:
-    - redis-cluster-1
+      - redis-cluster-1
   redis-cluster-4:
     image: redis:${REDIS_VERSION}-alpine
     container_name: redis-cluster-${REDIS_CLUSTER_4_PORT}
     volumes:
-    - ./docker/redis/redis.conf:/etc/redis/redis.conf
+      - ./docker/redis/redis.conf:/etc/redis/redis.conf
     ports:
-    - "${REDIS_CLUSTER_4_PORT}:6379"
-    - "1${REDIS_CLUSTER_4_PORT}:16379"
+      - "${REDIS_CLUSTER_4_PORT}:6379"
+      - "1${REDIS_CLUSTER_4_PORT}:16379"
     command:
-    - /bin/sh
-    - -c
-    - |
-      redis-server /etc/redis/redis.conf \
-                  --cluster-announce-ip ${HOST_IP_ADDRESS} \
-                  --cluster-announce-port ${REDIS_CLUSTER_4_PORT} \
-                  --cluster-announce-bus-port 1${REDIS_CLUSTER_4_PORT}
+      - /bin/sh
+      - -c
+      - |
+        redis-server /etc/redis/redis.conf \
+                    --cluster-announce-ip ${HOST_IP_ADDRESS} \
+                    --cluster-announce-port ${REDIS_CLUSTER_4_PORT} \
+                    --cluster-announce-bus-port 1${REDIS_CLUSTER_4_PORT}
     depends_on:
-    - redis-cluster-1
+      - redis-cluster-1
   redis-cluster-5:
     image: redis:${REDIS_VERSION}-alpine
     container_name: redis-cluster-${REDIS_CLUSTER_5_PORT}
     volumes:
-    - ./docker/redis/redis.conf:/etc/redis/redis.conf
+      - ./docker/redis/redis.conf:/etc/redis/redis.conf
     ports:
-    - "${REDIS_CLUSTER_5_PORT}:6379"
-    - "1${REDIS_CLUSTER_5_PORT}:16379"
+      - "${REDIS_CLUSTER_5_PORT}:6379"
+      - "1${REDIS_CLUSTER_5_PORT}:16379"
     command:
-    - /bin/sh
-    - -c
-    - |
-      redis-server /etc/redis/redis.conf \
-                  --cluster-announce-ip ${HOST_IP_ADDRESS} \
-                  --cluster-announce-port ${REDIS_CLUSTER_5_PORT} \
-                  --cluster-announce-bus-port 1${REDIS_CLUSTER_5_PORT}
+      - /bin/sh
+      - -c
+      - |
+        redis-server /etc/redis/redis.conf \
+                    --cluster-announce-ip ${HOST_IP_ADDRESS} \
+                    --cluster-announce-port ${REDIS_CLUSTER_5_PORT} \
+                    --cluster-announce-bus-port 1${REDIS_CLUSTER_5_PORT}
     depends_on:
-    - redis-cluster-1
+      - redis-cluster-1
   redis-cluster-6:
     image: redis:${REDIS_VERSION}-alpine
     container_name: redis-cluster-${REDIS_CLUSTER_6_PORT}
     volumes:
-    - ./docker/redis/redis.conf:/etc/redis/redis.conf
+      - ./docker/redis/redis.conf:/etc/redis/redis.conf
     ports:
-    - "${REDIS_CLUSTER_6_PORT}:6379"
-    - "1${REDIS_CLUSTER_6_PORT}:16379"
+      - "${REDIS_CLUSTER_6_PORT}:6379"
+      - "1${REDIS_CLUSTER_6_PORT}:16379"
     command:
-    - /bin/sh
-    - -c
-    - |
-      redis-server /etc/redis/redis.conf \
-                  --cluster-announce-ip ${HOST_IP_ADDRESS} \
-                  --cluster-announce-port ${REDIS_CLUSTER_6_PORT} \
-                  --cluster-announce-bus-port 1${REDIS_CLUSTER_6_PORT}
+      - /bin/sh
+      - -c
+      - |
+        redis-server /etc/redis/redis.conf \
+                    --cluster-announce-ip ${HOST_IP_ADDRESS} \
+                    --cluster-announce-port ${REDIS_CLUSTER_6_PORT} \
+                    --cluster-announce-bus-port 1${REDIS_CLUSTER_6_PORT}
     depends_on:
-    - redis-cluster-1
+      - redis-cluster-1
   redis-cluster-make:
     build:
       context: ./docker/redis
       args:
-      - REDIS_VERSION=${REDIS_VERSION}
+        - REDIS_VERSION=${REDIS_VERSION}
     image: redis:${REDIS_VERSION}-custom
     container_name: redis-cluster-make
     command:
-    - /bin/sh
-    - -c
-    - |
-      expect -c "
-      spawn redis-cli --cluster create \
-                        ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_1_PORT} \
-                        ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_2_PORT} \
-                        ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_3_PORT} \
-                        ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_4_PORT} \
-                        ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_5_PORT} \
-                        ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_6_PORT} \
-                      --cluster-replicas 1
-      expect \"Can I set the above configuration? (type 'yes' to accept): \"
-      send \"yes\n\"
-      expect eof
-      "
+      - /bin/sh
+      - -c
+      - |
+        expect -c "
+        spawn redis-cli --cluster create \
+                          ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_1_PORT} \
+                          ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_2_PORT} \
+                          ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_3_PORT} \
+                          ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_4_PORT} \
+                          ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_5_PORT} \
+                          ${HOST_IP_ADDRESS}:${REDIS_CLUSTER_6_PORT} \
+                        --cluster-replicas 1
+        expect \"Can I set the above configuration? (type 'yes' to accept): \"
+        send \"yes\n\"
+        expect eof
+        "
     depends_on:
-    - redis-cluster-1
-    - redis-cluster-2
-    - redis-cluster-3
-    - redis-cluster-4
-    - redis-cluster-5
-    - redis-cluster-6
+      - redis-cluster-1
+      - redis-cluster-2
+      - redis-cluster-3
+      - redis-cluster-4
+      - redis-cluster-5
+      - redis-cluster-6
 
   redis_exporter:
     image: oliver006/redis_exporter:latest
     container_name: redis_exporter
     ports:
-    - "9121:9121"
+      - "9121:9121"
     environment:
-    - REDIS_ADDR=redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_1_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_2_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_3_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_4_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_5_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_6_PORT}
+      - REDIS_ADDR=redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_1_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_2_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_3_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_4_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_5_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_6_PORT}
 
   # 起動したコンテナに /bin/sh でアクセスする場合には以下のコマンドを実行する
   # docker exec -it rabbitmq /bin/sh
@@ -205,60 +205,90 @@ services:
     container_name: rabbitmq1
     hostname: rabbitmq1
     environment:
-    - RABBITMQ_ERLANG_COOKIE
-    - RABBITMQ_DEFAULT_USER
-    - RABBITMQ_DEFAULT_PASS
-    - RABBITMQ_DEFAULT_VHOST
+      - RABBITMQ_ERLANG_COOKIE
+      - RABBITMQ_DEFAULT_USER
+      - RABBITMQ_DEFAULT_PASS
+      - RABBITMQ_DEFAULT_VHOST
   rabbitmq2:
     image: rabbitmq:${RABBITMQ_VERSION}-alpine
     container_name: rabbitmq2
     hostname: rabbitmq2
     depends_on:
-    - rabbitmq1
+      - rabbitmq1
     environment:
-    - RABBITMQ_ERLANG_COOKIE
+      - RABBITMQ_ERLANG_COOKIE
     volumes:
-    - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+      - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
     entrypoint: /bin/sh -c /usr/local/bin/cluster-entrypoint.sh
   rabbitmq3:
     image: rabbitmq:${RABBITMQ_VERSION}-alpine
     container_name: rabbitmq3
     hostname: rabbitmq3
     depends_on:
-    - rabbitmq1
+      - rabbitmq1
     environment:
-    - RABBITMQ_ERLANG_COOKIE
+      - RABBITMQ_ERLANG_COOKIE
     volumes:
-    - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+      - ./docker/rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
     entrypoint: /usr/local/bin/cluster-entrypoint.sh
   haproxy:
     image: haproxy:1.8.14-alpine
     container_name: haproxy
     volumes:
-    - ./docker/rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./docker/rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     depends_on:
-    - rabbitmq1
-    - rabbitmq2
-    - rabbitmq3
+      - rabbitmq1
+      - rabbitmq2
+      - rabbitmq3
     ports:
-    - "5672:5672"
-    - "15672:15672"
+      - "5672:5672"
+      - "15672:15672"
   haproxy-rsyslog:
     image: rafpe/docker-haproxy-rsyslog
     container_name: haproxy-rsyslog
     volumes:
-    - ./docker/rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./docker/rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     depends_on:
-    - haproxy
+      - haproxy
 
   rabbitmq_exporter:
     image: kbudde/rabbitmq-exporter:latest
     container_name: rabbitmq_exporter
     ports:
-    - "9419:9419"
+      - "9419:9419"
     environment:
-    - RABBIT_URL=http://haproxy:15672
-    - RABBIT_USER=${RABBITMQ_DEFAULT_USER}
-    - RABBIT_PASSWORD=${RABBITMQ_DEFAULT_PASS}
-    - RABBIT_CAPABILITIES=bert,no_sort
-    - PUBLISH_PORT=9419
+      - RABBIT_URL=http://haproxy:15672
+      - RABBIT_USER=${RABBITMQ_DEFAULT_USER}
+      - RABBIT_PASSWORD=${RABBITMQ_DEFAULT_PASS}
+      - RABBIT_CAPABILITIES=bert,no_sort
+      - PUBLISH_PORT=9419
+
+  # 起動したコンテナに /bin/sh でアクセスする場合には以下のコマンドを実行する
+  # docker exec -it postgresql /bin/sh
+  #
+  # psql を使用したい場合には以下のコマンドを実行する
+  # docker exec -it postgresql psql -U postgres
+  postgresql:
+    image: postgres:${POSTGRESQL_VERSION}-alpine
+    container_name: postgresql
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./sql:/sql
+    environment:
+      - LANG=ja_JP.UTF-8
+      - POSTGRES_PASSWORD=xxxxxxxx
+
+  # URL
+  # http://localhost:12000/
+  pgadmin4:
+    image: dpage/pgadmin4:${PGADMIN4_VERSION}
+    container_name: pgadmin4
+    ports:
+      - "12000:80"
+    volumes:
+      - ./docker/pgadmin4/data:/var/lib/pgadmin
+    environment:
+      # PGADMIN_DEFAULT_EMAIL には接続する PostgreSQL の ユーザ名を設定する（サーバを追加する時楽なため）
+      - PGADMIN_DEFAULT_EMAIL=postgres
+      - PGADMIN_DEFAULT_PASSWORD=yyyyyyyy
