#132 pgAdmin4 のデータ用ディレクトリを Git の管理対象外にしました

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ calilapi.properties
 # Prometheus, Grafana の storage
 docker/grafana/storage
 docker/prometheus/storage
+
+# pgAdmin4 のデータ用ディレクトリ
+docker/pgadmin4/data
