#132 Docker で Flyway の環境を構築しました

--- a/.env
+++ b/.env
@@ -15,3 +15,8 @@ RABBITMQ_DEFAULT_VHOST=/
 
 POSTGRESQL_VERSION=11.1
 PGADMIN4_VERSION=3.6
+
+FLYWAY_VERSION=5.2.4
+FLYWAY_URL=jdbc:postgresql://postgresql/ksbylending
+FLYWAY_USER=ksbylending_user
+FLYWAY_PASSWORD=xxxxxxxx
