--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,6 +180,9 @@ services:
     environment:
       - REDIS_ADDR=redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_1_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_2_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_3_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_4_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_5_PORT},redis://${HOST_IP_ADDRESS}:${REDIS_CLUSTER_6_PORT}
 
+  # 管理コンソールは以下のURLにアクセスする
+  # http://localhost:15672/
+  #
   # 起動したコンテナに /bin/sh でアクセスする場合には以下のコマンドを実行する
   # docker exec -it rabbitmq /bin/sh
   #
