--- a/build.gradle
+++ b/build.gradle
@@ -155,6 +155,7 @@ dependencies {
     implementation("org.simpleframework:simple-xml:2.7.1")
     implementation("com.univocity:univocity-parsers:2.7.6")
     implementation("com.google.guava:guava:27.0-jre")
+    implementation("org.flywaydb:flyway-core:5.2.4")
     testImplementation("org.dbunit:dbunit:2.6.0")
     testImplementation("com.icegreen:greenmail:1.5.8")
     testImplementation("org.assertj:assertj-core:3.11.1")
