#132 postgres_exporter＋PostgreSQL Statistics を導入して Grafana 上に PostgreSQL のメトリックスが表示されるようにしました

--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ FLYWAY_VERSION=5.2.4
 FLYWAY_URL=jdbc:postgresql://postgresql/ksbylending
 FLYWAY_USER=ksbylending_user
 FLYWAY_PASSWORD=xxxxxxxx
+
+POSTGRES_EXPORTER_USER=postgres_exporter
+POSTGRES_EXPORTER_PASSWORD=zzzzzzzz
