#132 Docker で SMTPサーバ＋Webmailクライアント環境を構築しました

--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ FLYWAY_PASSWORD=xxxxxxxx
 
 POSTGRES_EXPORTER_USER=postgres_exporter
 POSTGRES_EXPORTER_PASSWORD=zzzzzzzz
+
+MAILSERVER_VERSION=release-v6.1.0
