#132 Prometheus が Spring Actuator にアクセスした時にコンソールにレスポンスの内容が出力されないようにしました

--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -15,6 +15,7 @@ spring.redis.cluster.nodes[5]=172.23.136.33:6384
 
 # Spring MVC
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor=INFO
 # log4jdbc-log4j2
 logging.level.jdbc.sqlonly=DEBUG
 logging.level.jdbc.sqltiming=INFO
