--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+host.ip.address=172.31.16.1
 doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
 management.endpoints.web.exposure.include=health,info,loggers,prometheus
@@ -9,6 +10,21 @@ spring.datasource.hikari.password=xxxxxxxx
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.leak-detection-threshold=60000
 spring.datasource.hikari.register-mbeans=true
+
+spring.mail.host=localhost
+spring.mail.port=25
+
+spring.redis.cluster.nodes[0]=${host.ip.address}:6379
+spring.redis.cluster.nodes[1]=${host.ip.address}:6380
+spring.redis.cluster.nodes[2]=${host.ip.address}:6381
+spring.redis.cluster.nodes[3]=${host.ip.address}:6382
+spring.redis.cluster.nodes[4]=${host.ip.address}:6383
+spring.redis.cluster.nodes[5]=${host.ip.address}:6384
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=12345678
 
 spring.session.store-type=redis
 
