--- a/docker/rabbitmq/haproxy.cfg
+++ b/docker/rabbitmq/haproxy.cfg
@@ -13,13 +13,14 @@ defaults
     timeout client 50000
     timeout server 50000
 
-listen  stats
+listen stats
     bind *:1936
     mode http
     stats enable
     stats hide-version
     stats realm Haproxy\ Statistics
-    stats uri /
+    stats refresh 5s
+    stats uri /haproxy?stats
 
 listen rabbitmq
     bind *:5672
